Legger om til at prosesstasks kjører med sts-token i kontekst